# consulting-agent-with-sdk

./: .env.example  README.md  pyproject.toml
.claude/agents/: analyst.md  evaluator.md  researcher.md
.well-known/: agent.json
skills/consulting-brief-generator/: SKILL.md
skills/eval-consulting-brief/: SKILL.md
src/: a2a_client.py  a2a_server.py  agent.py  crewai_agent.py  langgraph_agent.py  memory.py  models.py  tools.py
